# TRex

./: .gitignore  FINTABLES_CROSSCHECK_DESIGN.md  README.md  config.formula_research.yaml  config.formula_research_aggressive.yaml  config.formula_research_capped.yaml  config.formula_research_cumhur.yaml  config.formula_research_guard.yaml  config.formula_research_legacy_guard_top5.yaml  config.formula_research_momentum.yaml  config.formula_research_momentum_cooldown_40.yaml  config.formula_research_momentum_cooldown_40_x1heavy.yaml  config.formula_research_momentum_cooldown_50.yaml  config.formula_research_momentum_quality_earnings.yaml  config.formula_research_momentum_queenstocks_shadow.yaml  config.formula_research_momentum_soft_penalty.yaml  config.formula_research_technical_confirmation.yaml  config.formula_research_technical_confirmation_aggressive.yaml  config.formula_research_technical_regime_candidate.yaml  config.no_fees.yaml  config.us_industrials_momentum.yaml  config.us_industrials_quality_earnings.yaml  config.us_industrials_quality_op_growth.yaml  config.us_industrials_quality_plus_earnings.yaml  config.us_industrials_quality_scorecap.yaml  config.us_large_cap_semis_quality_earnings.yaml  config.us_large_cap_semis_quality_op_growth.yaml  config.us_large_cap_software_quality_earnings.yaml  config.us_large_cap_software_quality_op_growth.yaml  config.us_large_cap_tech_asset_growth_guard.yaml  config.us_large_cap_tech_no_legacy_hw_top3.yaml  config.us_large_cap_tech_quality_earnings.yaml  config.us_large_cap_tech_quality_earnings_regime.yaml  config.us_large_cap_tech_quality_op_growth.yaml  config.yaml  pyproject.toml
reports/: INVALIDATED_RUNS.md  us_no_legacy_hw_top3_report.md  us_no_storage_top3_robustness.md  us_position_quality_guard_robustness.md
scripts/: analyze_high_score_technical_confirmation.py  analyze_high_score_technical_swaps.py  analyze_momentum_loss_exposures.py  analyze_momentum_soft_penalty_topn.py  analyze_momentum_x1_guard_candidate.py  analyze_momentum_x1_heavy_presignals.py  build_backtest_coverage_dataset.py  build_backtest_coverage_report.mjs  build_financial_freshness_audit.py  build_formula_debug_report.mjs  build_selected_announcement_priority.py  build_top6_debug_report.mjs  build_top6_monitoring_dashboard.mjs  build_us_industrials_universe.py  build_us_sp500_semis_universe.py  build_us_sp500_software_universe.py  build_us_sp500_tech_universe.py  build_vps_dashboard_bundle.py  debug_reference_growth_candidates.py  debug_reference_months.py  debug_reference_note_growth_variants.py  debug_reference_outlier_candidates.py  run_bist_earnings_quality_penalty_research.py  run_bist_earnings_quality_proxy_refine.py  run_bist_earnings_quality_proxy_research.py  run_bist_earnings_quality_weight_scale_research.py  (+49 more)
(+115 files in other folders)
